examples/micro-services/.kube/env/.build/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-v1-2-3
  labels:
    app: service1
    version: v1-2-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
      version: v1-2-3
  template:
    metadata:
      labels:
        app: service1
        version: v1-2-3
    spec:
      serviceAccountName: service1-v1-2-3-service-account
      containers:
        - name: service1
          image: '01alchemist/service1:2810dea114669e060cb752c29aafc1259d92709d'
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Berlin
      imagePullSecrets:
        - name: hub.docker.com.credentials
