examples/micro-services/.kube/env/.build/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service1
spec:
  sessionAffinity: ClientIP
  selector:
    app: service1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
