examples/micro-services/.kube/env/.build/resources/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service1
spec:
  host: service1
  subsets:
    - name: v1-2-3
      labels:
        version: v1-2-3
