examples/micro-services/.kube/env/.build/resources/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
    - service1
  http:
    - route:
        - destination:
            host: service1
            subset: v1-2-3
